HSEARCH-3282 Fix compilation error in tests with JDK8